# observantic

./: .gitignore  .tmuxp.yaml  README.md  devenv.nix  pyproject.toml
src/: observantic-verify.py
src/examples/: example.py  example_file.py  example_webhook.py  sqlite_example.py  webhook_example.py  webhook_server.py
src/observantic/: __init__.py  config.py  exceptions.py
src/observantic/core/: __init__.py  base.py
src/observantic/monitors/: __init__.py  file.py  sqlite.py  webhook.py
src/tests/: test_observantic.py  tests.py
